# manual/static/openapi/admin-api-openapi.yaml
@@ -218,10 +218,6 @@ components:
           type: integer
           format: int32
           nullable: true
-        cmsHistoryLength:
-          type: integer
-          format: int32
-          nullable: true
         logo:
           type: string
           nullable: true
